[package]
name = "bptree"
version = "0.1.0"
authors = ["Wietse <wietse.j@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num = "0.3"
num-integer = "0.1"

[dev-dependencies]
# assert_cmd = "0.11.0"
# predicates = "1.0.0"
tempfile = "3.0.7"
# walkdir = "2.2.7"

[lib]
test = true
doctest = false
